apps/staging/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only
    - host: prowlarr.milanoid.net # subdomain of my cloudflare domain
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
